Prevent headings from overflowing the parent width

--- a/assets/sass/elements.sass
+++ b/assets/sass/elements.sass
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6
 #child
   h1, h2, h3, h4, h5, h6
     width: 100%
+    box-sizing: border-box // Prevents from overflowing the parent's width
 
   h1
     border-bottom: 5px double var(--emphasis-color)
